// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`article found 1`] = `
Object {
  "data": Object {
    "foundArticleIds": Array [
      "AVvY-yizyCdS-nWhuYWx",
    ],
    "searchedText": "計程車上有裝悠遊卡感應器，老人悠悠卡可以享受優惠部分由政府補助，不影響司機收入",
  },
  "event": Object {
    "input": "計程車上有裝悠遊卡感應器，老人悠悠卡可以享受優惠部分由政府補助，不影響司機收入",
    "message": Object {
      "id": "6270464463537",
      "text": "計程車上有裝悠遊卡感應器，老人悠悠卡可以享受優惠部分由政府補助，不影響司機收入",
      "type": "text",
    },
    "timestamp": 1497994016356,
    "type": "message",
  },
  "isSkipUser": false,
  "issuedAt": 1497994017447,
  "replies": Array [
    Object {
      "content": Object {
        "text": "We're checking \\"計程車上有裝悠遊卡感⋯⋯ for you...",
      },
      "type": "text",
    },
    Object {
      "content": Object {
        "text": "Which message below matches what you just sent to us?",
      },
      "type": "text",
    },
    Object {
      "content": Object {
        "attachment": Object {
          "payload": Object {
            "elements": Array [
              Object {
                "buttons": Array [
                  Object {
                    "payload": 1,
                    "title": "Choose this one",
                    "type": "postback",
                  },
                ],
                "subtitle": "[Similarity: 52.41%]",
                "title": "計程車上有裝悠遊卡感應器，老人悠悠卡可以享受優惠部分由政府補助，不影響司機收入，下車時使用老人悠遊卡，跳錶車資105元，優惠32元，只扣73元，哈哈，這是屬於我",
              },
              Object {
                "buttons": Array [
                  Object {
                    "payload": 0,
                    "title": "Choose this one",
                    "type": "postback",
                  },
                ],
                "title": "None of these messages matches mine :(",
              },
            ],
            "template_type": "generic",
          },
          "type": "template",
        },
        "quick_replies": Array [
          Object {
            "content_type": "text",
            "payload": "Contact Cofacts",
            "title": "Contact Cofacts",
          },
        ],
      },
      "type": "carousel",
    },
  ],
  "state": "CHOOSING_ARTICLE",
  "userId": "Uc76d8ae9ccd1ada4f06c4e1515d46466",
}
`;

exports[`article found for comments 1`] = `
Object {
  "data": Object {
    "foundArticleIds": Array [
      "AVvY-yizyCdS-nWhuYWx",
    ],
    "searchedText": "計程車上有裝悠遊卡感應器，老人悠悠卡可以享受優惠部分由政府補助，不影響司機收入",
  },
  "event": Object {
    "input": "計程車上有裝悠遊卡感應器，老人悠悠卡可以享受優惠部分由政府補助，不影響司機收入",
    "message": Object {
      "id": "6270464463537",
      "text": "計程車上有裝悠遊卡感應器，老人悠悠卡可以享受優惠部分由政府補助，不影響司機收入",
      "type": "text",
    },
    "timestamp": 1497994016356,
    "type": "message",
  },
  "isSkipUser": false,
  "issuedAt": 1497994017447,
  "replies": Array [
    Object {
      "content": Object {
        "text": "Hey #Cofacts has messages 52similar to this one: , and
1 user considers this to be a rumor ❌
1 user thinks this can be a truth ⭕
1 user thinks this is simply a personal opinion 💬
, but 2  users think this is off-topic and Cofacts need not to handle it ⚠️️

Go to Cofacts' website for more information!
https://cofacts.g0v.tw/article/AVvY-yizyCdS-nWhuYWx",
      },
      "type": "text",
    },
  ],
  "state": "__INIT__",
  "userId": "0",
}
`;

exports[`articles found with high similarity 1`] = `
Object {
  "data": Object {
    "foundArticleIds": Array [
      "AVvY-yizyCdS-nWhuYWx",
      "AVvY-yizyCdS-nWhuYWy",
    ],
    "searchedText": "YouTube · 寻找健康人生",
  },
  "event": Object {
    "input": "YouTube · 寻找健康人生",
    "message": Object {
      "id": "6270464463537",
      "text": "YouTube · 寻找健康人生",
      "type": "text",
    },
    "timestamp": 1497994016356,
    "type": "message",
  },
  "isSkipUser": false,
  "issuedAt": 1497994017447,
  "replies": Array [
    Object {
      "content": Object {
        "text": "We're checking \\"YouTube · ⋯⋯ for you...",
      },
      "type": "text",
    },
    Object {
      "content": Object {
        "text": "Which message below matches what you just sent to us?",
      },
      "type": "text",
    },
    Object {
      "content": Object {
        "attachment": Object {
          "payload": Object {
            "elements": Array [
              Object {
                "buttons": Array [
                  Object {
                    "payload": 1,
                    "title": "Choose this one",
                    "type": "postback",
                  },
                ],
                "subtitle": "[Similarity: 100.00%]",
                "title": "YouTube  ·  寻找健康人生",
              },
              Object {
                "buttons": Array [
                  Object {
                    "payload": 2,
                    "title": "Choose this one",
                    "type": "postback",
                  },
                ],
                "subtitle": "[Similarity: 100.00%]",
                "title": "YouTube
·
寻找健康人生",
              },
            ],
            "template_type": "generic",
          },
          "type": "template",
        },
        "quick_replies": Array [
          Object {
            "content_type": "text",
            "payload": "Contact Cofacts",
            "title": "Contact Cofacts",
          },
        ],
      },
      "type": "carousel",
    },
  ],
  "state": "CHOOSING_ARTICLE",
  "userId": "Uc76d8ae9ccd1ada4f06c4e1515d46466",
}
`;

exports[`only one article found with high similarity 1`] = `
Object {
  "data": Object {
    "foundArticleIds": Array [
      "AVvY-yizyCdS-nWhuYWx",
    ],
    "searchedText": "YouTube · 寻找健康人生",
  },
  "event": Object {
    "input": 1,
    "message": Object {
      "id": "6270464463537",
      "text": "YouTube · 寻找健康人生",
      "type": "text",
    },
    "timestamp": 1497994016356,
    "type": "message",
  },
  "isSkipUser": true,
  "issuedAt": 1497994017447,
  "replies": undefined,
  "state": "CHOOSING_ARTICLE",
  "userId": "Uc76d8ae9ccd1ada4f06c4e1515d46466",
}
`;

exports[`should handle article not found 1`] = `
Object {
  "data": Object {
    "searchedText": "YouTube · 寻找健康人生 驚！大批香蕉受到愛滋血污染！這種香蕉千萬不要吃！吃到可能會被 ...",
  },
  "event": Object {
    "input": "YouTube · 寻找健康人生 驚！大批香蕉受到愛滋血污染！這種香蕉千萬不要吃！吃到可能會被 ...",
    "message": Object {
      "id": "6270464463537",
      "text": "YouTube · 寻找健康人生 驚！大批香蕉受到愛滋血污染！這種香蕉千萬不要吃！吃到可能會被 ...",
      "type": "text",
    },
    "timestamp": 1497994016356,
    "type": "message",
  },
  "isSkipUser": false,
  "issuedAt": 1497994017447,
  "replies": Array [
    Object {
      "content": Object {
        "text": "We didn't find anything about \\"YouTube · ⋯⋯\\" :(",
      },
      "type": "text",
    },
    Object {
      "content": Object {
        "text": "【Submit this message?】
If you think this can be a rumor, please submit it such that other people can help fact-check and clarify.

Though you don't receive the result of fact-checking soon, this is a big help to those who receive the same messages in the future.",
      },
      "type": "text",
    },
    Object {
      "content": Object {
        "text": "Please tell us WHY YOU CONSIDER THIS A RUMOR so that we can understand the problem of this suspicious message.",
      },
      "type": "text",
    },
    Object {
      "content": Object {
        "attachment": Object {
          "payload": Object {
            "buttons": Array [
              Object {
                "payload": "n",
                "title": "Discard",
                "type": "postback",
              },
            ],
            "template_type": "button",
            "text": "Discard",
          },
          "type": "template",
        },
      },
      "type": "buttons",
    },
  ],
  "state": "ASKING_ARTICLE_SUBMISSION_REASON",
  "userId": "Uc76d8ae9ccd1ada4f06c4e1515d46466",
}
`;

exports[`should handle article not found for comments 1`] = `
Object {
  "data": Object {
    "searchedText": "YouTube · 寻找健康人生 驚！大批香蕉受到愛滋血污染！這種香蕉千萬不要吃！吃到可能會被 ...",
  },
  "event": Object {
    "input": "YouTube · 寻找健康人生 驚！大批香蕉受到愛滋血污染！這種香蕉千萬不要吃！吃到可能會被 ...",
    "message": Object {
      "id": "6270464463537",
      "text": "YouTube · 寻找健康人生 驚！大批香蕉受到愛滋血污染！這種香蕉千萬不要吃！吃到可能會被 ...",
      "type": "text",
    },
    "timestamp": 1497994016356,
    "type": "message",
  },
  "isSkipUser": false,
  "issuedAt": 1497994017447,
  "replies": Array [
    Object {
      "content": Object {
        "text": "We didn't find anything about \\"YouTube · ⋯⋯\\" :(\\"
You can try these websites again:

              蘭姆酒吐司Rumor & Truth https://www.facebook.com/rumtoast/
Or report this article to us via Line! 
http://bit.ly/cofacts-line-users",
      },
      "type": "text",
    },
  ],
  "state": "__INIT__",
  "userId": "0",
}
`;
